--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "jquery": "^3.6.3",
         "laravel-mix": "^6.0.49",
+        "swiper": "^9.0.5",
         "webpack": "^5.75.0"
     }
 }
