FE: change sidenav & add style products 1. change sidenav to fixed 2. add products styles [paginate, show more button] (mobile)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "mix watch",
-        "build": "mix"
+        "build": "mix build --production"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
